Year code updated in footer

--- a/index.html
+++ b/index.html
@@ -361,7 +361,8 @@
     <div class="container">
       <div class="row">
         <div class="col">
-          <p class="lead">Copyright &copy; 2018 Mizuxe.</p>
+          <!-- <p class="lead">Copyright &copy; 2018 Mizuxe.</p> -->
+          <p class="lead">Copyright &copy; <script>document.write(new Date().getFullYear());</script> Mizuxe</p>
           <p class="lead">
             Designed By: <a class="text-light" href="http://www.fb.com/shahedchysuzan" target="_blank">Suzan</a>
           </p>
